<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:background="@drawable/vien_dialog_home"
    >
    <TextView
        android:layout_margin="4dp"
        android:background="#EDA931"
        android:text="@string/home_dialog_sua_name_title"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <EditText
        android:hint="@string/home_dialog_sua_name_edit"
        android:id="@+id/home_ed_dat_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />
    <Button
        android:id="@+id/home_bt_dat_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/home_dialog_sua_name_button"
        android:textColor="@color/white"
        android:background="#0C3DE4"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="15dp"
        />


</LinearLayout>