<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="300dp"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@drawable/vien_dialog_home"
    >
    <TextView
        android:layout_margin="4dp"
        android:background="#EDA931"
        android:text="@string/home_dialog_caidat_title"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:id="@+id/home_caidat_ngonngu"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <ImageView
            android:src="@mipmap/icons8_language_64"
            android:layout_margin="12dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:text="@string/home_dialog_caidat_ngonngu"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_caidat_khoaapp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <ImageView
            android:src="@mipmap/icons8_lock_96"
            android:layout_margin="12dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />
        <TextView
            android:text="@string/home_dialog_caidat_pass"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/home_caidat_hotro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >
        <ImageView
            android:src="@mipmap/icons8_help_100"
            android:layout_margin="12dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
        />
        <TextView
            android:text="@string/home_dialog_caidat_hotro"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            />

    </LinearLayout>

</LinearLayout>